--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,5 +1,5 @@
 ---
-title: "Talk 1 on Relevant Topic in Your Field"
+title: "On the Innovative Application of China’s Traditional Arts and Crafts in the Industry of Fashion Arts"
 collection: talks
 type: "Talk"
 permalink: /talks/2012-03-01-talk-1
