--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -40,10 +40,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pub_date\ttitle\tvenue\texcerpt\tcitation\turl_slug\tpaper_url\r\n",
-      "2009-10-01\tPaper Title Number 1\tJournal 1\tThis paper is about the number 1. The number 2 is left for future work.\tYour Name, You. (2009). \"Paper Title Number 1.\" <i>Journal 1</i>. 1(1).\tpaper-title-number-1\thttp://academicpages.github.io/files/paper1.pdf\r\n",
-      "2010-10-01\tPaper Title Number 2\tJournal 1\tThis paper is about the number 2. The number 3 is left for future work.\tYour Name, You. (2010). \"Paper Title Number 2.\" <i>Journal 1</i>. 1(2).\tpaper-title-number-2\thttp://academicpages.github.io/files/paper2.pdf\r\n",
-      "2015-10-01\tPaper Title Number 3\tJournal 1\tThis paper is about the number 3. The number 4 is left for future work.\tYour Name, You. (2015). \"Paper Title Number 3.\" <i>Journal 1</i>. 1(3).\tpaper-title-number-3\thttp://academicpages.github.io/files/paper3.pdf"
+      "pub_date\ttitle\tvenue\texcerpt\tcitation\turl_slug\tpaper_url\n",
+      "2009-10-01\tPaper Title Number 1\tJournal 1\tThis paper is about the number 1. The number 2 is left for future work.\tYour Name, You. (2009). \"Paper Title Number 1.\" <i>Journal 1</i>. 1(1).\tpaper-title-number-1\thttp://dartzheng.github.io/files/paper1.pdf\n",
+      "2010-10-01\tPaper Title Number 2\tJournal 1\tThis paper is about the number 2. The number 3 is left for future work.\tYour Name, You. (2010). \"Paper Title Number 2.\" <i>Journal 1</i>. 1(2).\tpaper-title-number-2\thttp://dartzheng.github.io/files/paper2.pdf\n",
+      "2024-01-18\tResearch on the Integration of Industry and Education in Talent Cultivation within the Fashion Industry: A Case Study of the Fashion Institute at Shanghai S University, an Applied Undergraduate College\tJournal 1\tThis paper is about fashion. \tYour Name, You. (2015). \"Paper Title Number 3.\" <i>Journal 1</i>. 1(3).\tpaper-title-number-3\thttp://dartzheng.github.io/files/paper3.pdf"
      ]
     }
    ],
@@ -62,13 +62,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd"
    ]
@@ -86,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -180,6 +192,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Escape special characters\n",
     "\n",
@@ -188,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -218,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -280,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -302,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -313,21 +335,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---\r\n",
-      "title: \"Paper Title Number 1\"\r\n",
-      "collection: publications\r\n",
-      "permalink: /publication/2009-10-01-paper-title-number-1\r\n",
-      "excerpt: 'This paper is about the number 1. The number 2 is left for future work.'\r\n",
-      "date: 2009-10-01\r\n",
-      "venue: 'Journal 1'\r\n",
-      "paperurl: 'http://academicpages.github.io/files/paper1.pdf'\r\n",
-      "citation: 'Your Name, You. (2009). &quot;Paper Title Number 1.&quot; <i>Journal 1</i>. 1(1).'\r\n",
-      "---\r\n",
-      "This paper is about the number 1. The number 2 is left for future work.\r\n",
-      "\r\n",
-      "[Download paper here](http://academicpages.github.io/files/paper1.pdf)\r\n",
-      "\r\n",
-      "Recommended citation: Your Name, You. (2009). \"Paper Title Number 1.\" <i>Journal 1</i>. 1(1)."
+      "---\n",
+      "title: \"Paper\"\n",
+      "collection: publications\n",
+      "permalink: /publications/2009-10-01-paper-title-number-1\n",
+      "excerpt: 'As the manufacturing industry continues to transform and upgrade, the knitwear manufacturing sector urgently needs to move away from traditional labor-intensive production models. This text discusses the progress of fully fashioned computerized flat knitting machine technology in the field of intelligent manufacturing and conducts a detailed application study on Shima Seiki's fully fashioned knitting technology. The analysis explores both the hardware structure of the Mach2XS type four-bed fully fashioned computerized flat knitting machine and the design methods and principles of the SDS-ONE design system. The results show that fully fashioned knitting technology has advanced features in products, production models, and conceptual methods, which will have a profound impact on the field of intelligent manufacturing in multiple aspects.'\n",
+      "date: 2019-01-18\n",
+      "venue: 'Shanghai Textile Science & Technology'\n",
+      "paperurl: 'http://dartzheng.github.io/files/paper1.pdf'\n",
+      "citation: '[1]郑兴昱,袁蓉.基于针织全成形电脑横机智能技术的应用设计[J].上海纺织科技,2019,47(01):1-5.DOI:10.16549/j.cnki.issn.1001-2044.2019.01.001.'\n",
+      "---\n",
+      "As the manufacturing industry continues to transform and upgrade, the knitwear manufacturing sector urgently needs to move away from traditional labor-intensive production models. This text discusses the progress of fully fashioned computerized flat knitting machine technology in the field of intelligent manufacturing and conducts a detailed application study on Shima Seiki's fully fashioned knitting technology. The analysis explores both the hardware structure of the Mach2XS type four-bed fully fashioned computerized flat knitting machine and the design methods and principles of the SDS-ONE design system. The results show that fully fashioned knitting technology has advanced features in products, production models, and conceptual methods, which will have a profound impact on the field of intelligent manufacturing in multiple aspects.\n",
+      "\n",
+      "[Download paper here](http://dartzheng.github.io/files/paper1.pdf)\n",
+      "\n",
+      "Recommended citation: [1]郑兴昱,袁蓉.基于针织全成形电脑横机智能技术的应用设计[J].上海纺织科技,2019,47(01):1-5.DOI:10.16549/j.cnki.issn.1001-2044.2019.01.001."
      ]
     }
    ],
@@ -363,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
