--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -41,8 +41,8 @@
      "output_type": "stream",
      "text": [
       "pub_date\ttitle\tvenue\texcerpt\tcitation\turl_slug\tpaper_url\n",
-      "2009-10-01\tPaper Title Number 1\tJournal 1\tThis paper is about the number 1. The number 2 is left for future work.\tYour Name, You. (2009). \"Paper Title Number 1.\" <i>Journal 1</i>. 1(1).\tpaper-title-number-1\thttp://dartzheng.github.io/files/paper1.pdf\n",
-      "2010-10-01\tPaper Title Number 2\tJournal 1\tThis paper is about the number 2. The number 3 is left for future work.\tYour Name, You. (2010). \"Paper Title Number 2.\" <i>Journal 1</i>. 1(2).\tpaper-title-number-2\thttp://dartzheng.github.io/files/paper2.pdf\n",
+      "2009-10-01\tPaper\tJournal 1\tThis paper is about the number 1. The number 2 is left for future work.\tYour Name, You. (2009). \"Paper Title Number 1.\" <i>Journal 1</i>. 1(1).\tpaper-title-number-1\thttp://dartzheng.github.io/files/paper1.pdf\n",
+      "2010-10-01\tPaper\tJournal 1\tThis paper is about the number 2. The number 3 is left for future work.\tYour Name, You. (2010). \"Paper Title Number 2.\" <i>Journal 1</i>. 1(2).\tpaper-title-number-2\thttp://dartzheng.github.io/files/paper2.pdf\n",
       "2024-01-18\tResearch on the Integration of Industry and Education in Talent Cultivation within the Fashion Industry: A Case Study of the Fashion Institute at Shanghai S University, an Applied Undergraduate College\tJournal 1\tThis paper is about fashion. \tYour Name, You. (2015). \"Paper Title Number 3.\" <i>Journal 1</i>. 1(3).\tpaper-title-number-3\thttp://dartzheng.github.io/files/paper3.pdf"
      ]
     }
@@ -62,27 +62,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n"
    ]
   },
   {
@@ -98,95 +87,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pub_date</th>\n",
-       "      <th>title</th>\n",
-       "      <th>venue</th>\n",
-       "      <th>excerpt</th>\n",
-       "      <th>citation</th>\n",
-       "      <th>url_slug</th>\n",
-       "      <th>paper_url</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2009-10-01</td>\n",
-       "      <td>Paper Title Number 1</td>\n",
-       "      <td>Journal 1</td>\n",
-       "      <td>This paper is about the number 1. The number 2...</td>\n",
-       "      <td>Your Name, You. (2009). \"Paper Title Number 1....</td>\n",
-       "      <td>paper-title-number-1</td>\n",
-       "      <td>http://academicpages.github.io/files/paper1.pdf</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2010-10-01</td>\n",
-       "      <td>Paper Title Number 2</td>\n",
-       "      <td>Journal 1</td>\n",
-       "      <td>This paper is about the number 2. The number 3...</td>\n",
-       "      <td>Your Name, You. (2010). \"Paper Title Number 2....</td>\n",
-       "      <td>paper-title-number-2</td>\n",
-       "      <td>http://academicpages.github.io/files/paper2.pdf</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2015-10-01</td>\n",
-       "      <td>Paper Title Number 3</td>\n",
-       "      <td>Journal 1</td>\n",
-       "      <td>This paper is about the number 3. The number 4...</td>\n",
-       "      <td>Your Name, You. (2015). \"Paper Title Number 3....</td>\n",
-       "      <td>paper-title-number-3</td>\n",
-       "      <td>http://academicpages.github.io/files/paper3.pdf</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     pub_date                 title      venue  \\\n",
-       "0  2009-10-01  Paper Title Number 1  Journal 1   \n",
-       "1  2010-10-01  Paper Title Number 2  Journal 1   \n",
-       "2  2015-10-01  Paper Title Number 3  Journal 1   \n",
-       "\n",
-       "                                             excerpt  \\\n",
-       "0  This paper is about the number 1. The number 2...   \n",
-       "1  This paper is about the number 2. The number 3...   \n",
-       "2  This paper is about the number 3. The number 4...   \n",
-       "\n",
-       "                                            citation              url_slug  \\\n",
-       "0  Your Name, You. (2009). \"Paper Title Number 1....  paper-title-number-1   \n",
-       "1  Your Name, You. (2010). \"Paper Title Number 2....  paper-title-number-2   \n",
-       "2  Your Name, You. (2015). \"Paper Title Number 3....  paper-title-number-3   \n",
-       "\n",
-       "                                         paper_url  \n",
-       "0  http://academicpages.github.io/files/paper1.pdf  \n",
-       "1  http://academicpages.github.io/files/paper2.pdf  \n",
-       "2  http://academicpages.github.io/files/paper3.pdf  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "publications = pd.read_csv(\"publications.tsv\", sep=\"\\t\", header=0)\n",
-    "publications\n"
+    "publications\n",
+    "import pandas as pd  # 导入Pandas库并定义别名为pd\n",
+    "publications = pd.read_csv(\"publications.tsv\", sep=\"\\t\", header=0)  # 使用pd读取TSV文件\n"
    ]
   },
   {
@@ -210,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -240,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -302,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -313,8 +225,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2009-10-01-paper-title-number-1.md  2015-10-01-paper-title-number-3.md\r\n",
-      "2010-10-01-paper-title-number-2.md\r\n"
+      "2009-10-01-paper-title-number-1.md 2015-10-01-paper-title-number-3.md\n",
+      "2010-10-01-paper-title-number-2.md 2024-01-18-paper-title-number-3.md\n"
      ]
     }
    ],
@@ -324,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -338,18 +250,18 @@
       "---\n",
       "title: \"Paper\"\n",
       "collection: publications\n",
-      "permalink: /publications/2009-10-01-paper-title-number-1\n",
-      "excerpt: 'As the manufacturing industry continues to transform and upgrade, the knitwear manufacturing sector urgently needs to move away from traditional labor-intensive production models. This text discusses the progress of fully fashioned computerized flat knitting machine technology in the field of intelligent manufacturing and conducts a detailed application study on Shima Seiki's fully fashioned knitting technology. The analysis explores both the hardware structure of the Mach2XS type four-bed fully fashioned computerized flat knitting machine and the design methods and principles of the SDS-ONE design system. The results show that fully fashioned knitting technology has advanced features in products, production models, and conceptual methods, which will have a profound impact on the field of intelligent manufacturing in multiple aspects.'\n",
-      "date: 2019-01-18\n",
-      "venue: 'Shanghai Textile Science & Technology'\n",
+      "permalink: /publication/2009-10-01-paper-title-number-1\n",
+      "excerpt: 'This paper is about the number 1. The number 2 is left for future work.'\n",
+      "date: 2009-10-01\n",
+      "venue: 'Journal 1'\n",
       "paperurl: 'http://dartzheng.github.io/files/paper1.pdf'\n",
-      "citation: '[1]郑兴昱,袁蓉.基于针织全成形电脑横机智能技术的应用设计[J].上海纺织科技,2019,47(01):1-5.DOI:10.16549/j.cnki.issn.1001-2044.2019.01.001.'\n",
+      "citation: 'Your Name, You. (2009). &quot;Paper Title Number 1.&quot; <i>Journal 1</i>. 1(1).'\n",
       "---\n",
-      "As the manufacturing industry continues to transform and upgrade, the knitwear manufacturing sector urgently needs to move away from traditional labor-intensive production models. This text discusses the progress of fully fashioned computerized flat knitting machine technology in the field of intelligent manufacturing and conducts a detailed application study on Shima Seiki's fully fashioned knitting technology. The analysis explores both the hardware structure of the Mach2XS type four-bed fully fashioned computerized flat knitting machine and the design methods and principles of the SDS-ONE design system. The results show that fully fashioned knitting technology has advanced features in products, production models, and conceptual methods, which will have a profound impact on the field of intelligent manufacturing in multiple aspects.\n",
+      "This paper is about the number 1. The number 2 is left for future work.\n",
       "\n",
       "[Download paper here](http://dartzheng.github.io/files/paper1.pdf)\n",
       "\n",
-      "Recommended citation: [1]郑兴昱,袁蓉.基于针织全成形电脑横机智能技术的应用设计[J].上海纺织科技,2019,47(01):1-5.DOI:10.16549/j.cnki.issn.1001-2044.2019.01.001."
+      "Recommended citation: Your Name, You. (2009). \"Paper Title Number 1.\" <i>Journal 1</i>. 1(1)."
      ]
     }
    ],
