--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -225,8 +225,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2009-10-01-paper-title-number-1.md 2015-10-01-paper-title-number-3.md\n",
-      "2010-10-01-paper-title-number-2.md 2024-01-18-paper-title-number-3.md\n"
+      "2009-10-01-paper-title-number-1.md 2024-01-18-paper-title-number-3.md\n",
+      "2010-10-01-paper-title-number-2.md\n"
      ]
     }
    ],
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -271,14 +271,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "collapsed": true,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---\n",
+      "title: \"Research on the Integration of Industry and Education in Talent Cultivation within the Fashion Industry: A Case Study of the Fashion Institute at Shanghai S University, an Applied Undergraduate College\"\n",
+      "collection: publications\n",
+      "permalink: /publication/2024-01-18-paper-title-number-3\n",
+      "excerpt: 'This paper is about fashion. '\n",
+      "date: 2024-01-18\n",
+      "venue: 'Journal 1'\n",
+      "paperurl: 'http://dartzheng.github.io/files/paper3.pdf'\n",
+      "citation: 'Your Name, You. (2015). &quot;Paper Title Number 3.&quot; <i>Journal 1</i>. 1(3).'\n",
+      "---\n",
+      "This paper is about fashion. \n",
+      "\n",
+      "[Download paper here](http://dartzheng.github.io/files/paper3.pdf)\n",
+      "\n",
+      "Recommended citation: Your Name, You. (2015). \"Paper Title Number 3.\" <i>Journal 1</i>. 1(3)."
+     ]
+    }
+   ],
+   "source": [
+    "!cat ../_publications/2024-01-18-paper-title-number-3.md"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---\n",
+      "title: \"Paper\"\n",
+      "collection: publications\n",
+      "permalink: /publication/2010-10-01-paper-title-number-2\n",
+      "excerpt: 'This paper is about the number 2. The number 3 is left for future work.'\n",
+      "date: 2010-10-01\n",
+      "venue: 'Journal 1'\n",
+      "paperurl: 'http://dartzheng.github.io/files/paper2.pdf'\n",
+      "citation: 'Your Name, You. (2010). &quot;Paper Title Number 2.&quot; <i>Journal 1</i>. 1(2).'\n",
+      "---\n",
+      "This paper is about the number 2. The number 3 is left for future work.\n",
+      "\n",
+      "[Download paper here](http://dartzheng.github.io/files/paper2.pdf)\n",
+      "\n",
+      "Recommended citation: Your Name, You. (2010). \"Paper Title Number 2.\" <i>Journal 1</i>. 1(2)."
+     ]
+    }
+   ],
+   "source": [
+    "!cat ../_publications/2010-10-01-paper-title-number-2.md"
+   ]
   }
  ],
  "metadata": {
