--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false
    },
@@ -41,9 +41,10 @@
      "output_type": "stream",
      "text": [
       "pub_date\ttitle\tvenue\texcerpt\tcitation\turl_slug\tpaper_url\n",
-      "2009-10-01\tPaper\tJournal 1\tThis paper is about the number 1. The number 2 is left for future work.\tYour Name, You. (2009). \"Paper Title Number 1.\" <i>Journal 1</i>. 1(1).\tpaper-title-number-1\thttp://dartzheng.github.io/files/paper1.pdf\n",
-      "2010-10-01\tPaper\tJournal 1\tThis paper is about the number 2. The number 3 is left for future work.\tYour Name, You. (2010). \"Paper Title Number 2.\" <i>Journal 1</i>. 1(2).\tpaper-title-number-2\thttp://dartzheng.github.io/files/paper2.pdf\n",
-      "2024-01-18\tResearch on the Integration of Industry and Education in Talent Cultivation within the Fashion Industry: A Case Study of the Fashion Institute at Shanghai S University, an Applied Undergraduate College\tJournal 1\tThis paper is about fashion. \tYour Name, You. (2015). \"Paper Title Number 3.\" <i>Journal 1</i>. 1(3).\tpaper-title-number-3\thttp://dartzheng.github.io/files/paper3.pdf"
+      "2009-10-01\tApplication Design Based on Intelligent Technology of Wholegarment Computerized Flat Knitting Machine\tShanghai Textile Science & Technology\tAs the manufacturing industry continues to transform and upgrade, the knitwear manufacturing sector urgently needs to move away from traditional labor-intensive production models. This text discusses the progress of fully fashioned computerized flat knitting machine technology in the field of intelligent manufacturing and conducts a detailed application study on Shima Seiki's fully fashioned knitting technology. The analysis explores both the hardware structure of the Mach2XS type four-bed fully fashioned computerized flat knitting machine and the design methods and principles of the SDS-ONE design system. The results show that fully fashioned knitting technology has advanced features in products, production models, and conceptual methods, which will have a profound impact on the field of intelligent manufacturing in multiple aspects.\t[1]郑兴昱,袁蓉.基于针织全成形电脑横机智能技术的应用设计[J].上海纺织科技,2019,47(01):1-5.DOI:10.16549/j.cnki.issn.1001-2044.2019.01.001.\thttp://dartzheng.github.io/files/paper1.pdf\n",
+      "2010-10-01\tDigital Design Strategies and Process Research on Children's Wearable Wholegarment Knitted Masks\tShanghai Textile Science & Technology\tThe design process of children's fully fashioned knitted masks is elaborated from the aspects of style structure and molding process. The knitting processes for the mask body, ear straps, and the interior of the mask are introduced. The results indicate that the use of fully fashioned knitting technology can achieve one-time molding of children's masks. In the design of the functional layer, a replaceable filter cartridge structure can be utilized to accommodate filters with various functions, which is of great significance for enhancing the comfort of wearing children's masks and reducing resource wastage.\t[1]戴竞宇,郑兴昱,施慧.儿童可穿戴全成形针织口罩数字化设计策略与工艺研究[J].上海纺织科技,2022,50(10):40-43+52.DOI:10.16549/j.cnki.issn.1001-2044.2022.10.029.\thttp://dartzheng.github.io/files/paper2.pdf\n",
+      "2024-01-18\tResearch on the Integration of Industry and Education in Talent Cultivation within the Fashion Industry: A Case Study of the Fashion Institute at Shanghai S University, an Applied Undergraduate College\tMaster's Degree Graduate Thesis\tThis is a thesis on the talent cultivation model of industry-education integration in the fashion industry, which discusses the author's exploration and research on the industry-education integration talent cultivation model during their teaching period in the fashion industry. \tOmitted for now\thttp://dartzheng.github.io/files/paper3.pdf\n",
+      "2017-10-28\tDesign of Multi-layer Composite Structures on the SVR 123SP Flat Knitting Machine\tKnitting Industries\tExplain the design principles of multi-layer composite structures, based on the SVR 123SP flat knitting machine's weft insertion knitting technology, design and develop three types of multi-layer composite knit fabrics: corrugated weft insertion structures, jacquard weft insertion structures, and imitation shuttle-woven style structures. Provide a detailed introduction to the raw material specifications, structure design, and knitting principles, and highlight the key points in the research and development of multi-layer composite structures as well as their application directions, which has certain guiding significance for enterprises developing such products.\t[1]王建萍,郝赟,郑兴昱.多层复合组织在SVR 123SP横机上的设计[J].针织工业,2017(10):21-24.\thttp://dartzheng.github.io/files/paper4.pdf"
      ]
     }
    ],
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 79,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 81,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -214,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 83,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -225,8 +226,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2009-10-01-paper-title-number-1.md 2024-01-18-paper-title-number-3.md\n",
-      "2010-10-01-paper-title-number-2.md\n"
+      "2009-10-01-paper-title-number-1.md paper2.pdf.md\n",
+      "2010-10-01-paper-title-number-2.md paper3.pdf.md\n",
+      "paper1.pdf.md                      paper4.pdf.md\n"
      ]
     }
    ],
@@ -236,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -271,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 85,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -282,21 +284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---\n",
-      "title: \"Research on the Integration of Industry and Education in Talent Cultivation within the Fashion Industry: A Case Study of the Fashion Institute at Shanghai S University, an Applied Undergraduate College\"\n",
-      "collection: publications\n",
-      "permalink: /publication/2024-01-18-paper-title-number-3\n",
-      "excerpt: 'This paper is about fashion. '\n",
-      "date: 2024-01-18\n",
-      "venue: 'Journal 1'\n",
-      "paperurl: 'http://dartzheng.github.io/files/paper3.pdf'\n",
-      "citation: 'Your Name, You. (2015). &quot;Paper Title Number 3.&quot; <i>Journal 1</i>. 1(3).'\n",
-      "---\n",
-      "This paper is about fashion. \n",
-      "\n",
-      "[Download paper here](http://dartzheng.github.io/files/paper3.pdf)\n",
-      "\n",
-      "Recommended citation: Your Name, You. (2015). \"Paper Title Number 3.\" <i>Journal 1</i>. 1(3)."
+      "cat: ../_publications/2024-01-18-paper-title-number-3.md: No such file or directory\n"
      ]
     }
    ],
@@ -306,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
