--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 88,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 89,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 90,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 96,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -226,19 +226,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2009-10-01-paper-title-number-1.md paper2.pdf.md\n",
-      "2010-10-01-paper-title-number-2.md paper3.pdf.md\n",
-      "paper1.pdf.md                      paper4.pdf.md\n"
+      "../_publications/paper1.pdf.md\n"
      ]
     }
    ],
    "source": [
-    "!ls ../_publications/"
+    "!ls ../_publications/paper1.pdf.md"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -250,30 +248,27 @@
      "output_type": "stream",
      "text": [
       "---\n",
-      "title: \"Paper\"\n",
+      "title: \"Application Design Based on Intelligent Technology of Wholegarment Computerized Flat Knitting Machine\"\n",
       "collection: publications\n",
-      "permalink: /publication/2009-10-01-paper-title-number-1\n",
-      "excerpt: 'This paper is about the number 1. The number 2 is left for future work.'\n",
+      "permalink: /publication/2009-10-01-http://dartzheng.github.io/files/paper1.pdf\n",
+      "excerpt: 'As the manufacturing industry continues to transform and upgrade, the knitwear manufacturing sector urgently needs to move away from traditional labor-intensive production models. This text discusses the progress of fully fashioned computerized flat knitting machine technology in the field of intelligent manufacturing and conducts a detailed application study on Shima Seiki&apos;s fully fashioned knitting technology. The analysis explores both the hardware structure of the Mach2XS type four-bed fully fashioned computerized flat knitting machine and the design methods and principles of the SDS-ONE design system. The results show that fully fashioned knitting technology has advanced features in products, production models, and conceptual methods, which will have a profound impact on the field of intelligent manufacturing in multiple aspects.'\n",
       "date: 2009-10-01\n",
-      "venue: 'Journal 1'\n",
-      "paperurl: 'http://dartzheng.github.io/files/paper1.pdf'\n",
-      "citation: 'Your Name, You. (2009). &quot;Paper Title Number 1.&quot; <i>Journal 1</i>. 1(1).'\n",
+      "venue: 'Shanghai Textile Science &amp; Technology'\n",
+      "citation: '[1]郑兴昱,袁蓉.基于针织全成形电脑横机智能技术的应用设计[J].上海纺织科技,2019,47(01):1-5.DOI:10.16549/j.cnki.issn.1001-2044.2019.01.001.'\n",
       "---\n",
-      "This paper is about the number 1. The number 2 is left for future work.\n",
+      "As the manufacturing industry continues to transform and upgrade, the knitwear manufacturing sector urgently needs to move away from traditional labor-intensive production models. This text discusses the progress of fully fashioned computerized flat knitting machine technology in the field of intelligent manufacturing and conducts a detailed application study on Shima Seiki&apos;s fully fashioned knitting technology. The analysis explores both the hardware structure of the Mach2XS type four-bed fully fashioned computerized flat knitting machine and the design methods and principles of the SDS-ONE design system. The results show that fully fashioned knitting technology has advanced features in products, production models, and conceptual methods, which will have a profound impact on the field of intelligent manufacturing in multiple aspects.\n",
       "\n",
-      "[Download paper here](http://dartzheng.github.io/files/paper1.pdf)\n",
-      "\n",
-      "Recommended citation: Your Name, You. (2009). \"Paper Title Number 1.\" <i>Journal 1</i>. 1(1)."
+      "Recommended citation: [1]郑兴昱,袁蓉.基于针织全成形电脑横机智能技术的应用设计[J].上海纺织科技,2019,47(01):1-5.DOI:10.16549/j.cnki.issn.1001-2044.2019.01.001."
      ]
     }
    ],
    "source": [
-    "!cat ../_publications/2009-10-01-paper-title-number-1.md"
+    "!cat ../_publications/paper1.pdf.md"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 94,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -294,28 +289,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---\n",
-      "title: \"Paper\"\n",
-      "collection: publications\n",
-      "permalink: /publication/2010-10-01-paper-title-number-2\n",
-      "excerpt: 'This paper is about the number 2. The number 3 is left for future work.'\n",
-      "date: 2010-10-01\n",
-      "venue: 'Journal 1'\n",
-      "paperurl: 'http://dartzheng.github.io/files/paper2.pdf'\n",
-      "citation: 'Your Name, You. (2010). &quot;Paper Title Number 2.&quot; <i>Journal 1</i>. 1(2).'\n",
-      "---\n",
-      "This paper is about the number 2. The number 3 is left for future work.\n",
-      "\n",
-      "[Download paper here](http://dartzheng.github.io/files/paper2.pdf)\n",
-      "\n",
-      "Recommended citation: Your Name, You. (2010). \"Paper Title Number 2.\" <i>Journal 1</i>. 1(2)."
+      "cat: ../_publications/2010-10-01-paper-title-number-2.md: No such file or directory\n"
      ]
     }
    ],
