--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,11 +1,11 @@
 ---
-title: "Talk 1 on Relevant Topic in Your Field"
+title: "Served as the "Fashion Technology" Venue Manager at the 46th WorldSkills Competition Shanghai Selection Event"
 collection: talks
-type: "Talk"
+type: "Skills Competition"
 permalink: /talks/2012-03-01-talk-1
-venue: "UC San Francisco, Department of Testing"
-date: 2012-03-01
-location: "San Francisco, California"
+venue: "WorldSkills Competition"
+date: 2022-11-01
+location: "Shanghai"
 ---
-
+![Editing a markdown file for a talk](/images/works03.jpg)
 This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
