--- a/_talks/2017-04-12-talk-3.md
+++ b/_talks/2017-04-12-talk-3.md
@@ -8,6 +8,6 @@ date: 2017-04-12
 location: " Shanghai"
 ---
 
-[More information here](https://mp.weixin.qq.com/s/Iw-AsxAwwarwEk9CRmRMYA)
-![Editing a markdown file for a talk](/images/2017xiuchang.png)
+[More information here](http://example2.com)
+
 As the main person in charge of connecting Donghua students at Tivi Fashion Company, I assisted more than 50 students in completing the presentation and production of over 80 sets of knitwear show pieces. The main tasks included yarn selection, pattern design, process improvement, and schedule arrangement.
