--- a/_talks/2022-12-01-talk-1.md
+++ b/_talks/2022-12-01-talk-1.md
@@ -2,10 +2,10 @@
 title: "Served as the "Fashion Technology" Venue Manager at the 46th WorldSkills Competition Shanghai Selection Event"
 collection: talks
 type: "Skills Competition"
-permalink: /talks/2012-03-01-talk-1
+permalink: /talks/2022-12-01-talk-1
 venue: "WorldSkills Competition"
-date: 2022-11-01
+date: 2022-12-01
 location: "Shanghai"
 ---
 ![Editing a markdown file for a talk](/images/works03.jpg)
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+As the Venue Manager, responsible for pre-competition preparations, on-site management, liaison with expert teams, management of technical support, and competition operations support team.
