--- a/markdown_generator/talks.ipynb
+++ b/markdown_generator/talks.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
@@ -57,9 +57,9 @@
      "output_type": "stream",
      "text": [
       "title\ttype\turl_slug\tvenue\tdate\tlocation\ttalk_url\tdescription\n",
-      "Talk 1 on Relevant Topic in Your Field\tTalk\ttalk-1\tUC San Francisco, Department of Testing\t2012-03-01\tSan Francisco, California\t\tThis is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!\n",
+      "Served as the \"Fashion Technology\" Venue Manager at the 46th WorldSkills Competition Shanghai Selection Event\tSkills Competition\ttalk-1\tWorldSkills Competition\t2022-12-01\tShanghai\t\tAs the Venue Manager, responsible for pre-competition preparations, on-site management, liaison with expert teams, management of technical support, and competition operations support team.\n",
       "Tutorial 1 on Relevant Topic in Your Field\tTutorial\ttutorial-1\tUC-Berkeley Institute for Testing Science\t2013-03-01\tBerkeley CA, USA\thttp://exampleurl.com\tThis is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!\n",
-      "Talk 2 on Relevant Topic in Your Field\tTalk\ttalk-2\tLondon School of Testing\t2014-02-01\tLondon, UK\thttp://example2.com\tThis is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!\n",
+      "SIFEC Knitting Design Discipline Construction\tTeaching\ttalk-2\tLondon School of Testing\t2014-02-01\tLondon, UK\thttp://example2.com\tThis is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!\n",
       "\"Donghua Diwei\" 2017 Shanghai Fashion Week Knitwear Special Show Release\tFashion show Collaborative Project\ttalk-3\t2017AW Shanghai Fashion Week\t2017-04-12\t Shanghai\thttp://example2.com\tAs the main person in charge of connecting Donghua students at Tivi Fashion Company, I assisted more than 50 students in completing the presentation and production of over 80 sets of knitwear show pieces. The main tasks included yarn selection, pattern design, process improvement, and schedule arrangement."
      ]
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -122,14 +122,14 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Talk 1 on Relevant Topic in Your Field</td>\n",
-       "      <td>Talk</td>\n",
+       "      <td>Served as the \"Fashion Technology\" Venue Manag...</td>\n",
+       "      <td>Skills Competition</td>\n",
        "      <td>talk-1</td>\n",
-       "      <td>UC San Francisco, Department of Testing</td>\n",
-       "      <td>2012-03-01</td>\n",
-       "      <td>San Francisco, California</td>\n",
+       "      <td>WorldSkills Competition</td>\n",
+       "      <td>2022-12-01</td>\n",
+       "      <td>Shanghai</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>This is a description of your talk, which is a...</td>\n",
+       "      <td>As the Venue Manager, responsible for pre-comp...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -144,8 +144,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Talk 2 on Relevant Topic in Your Field</td>\n",
-       "      <td>Talk</td>\n",
+       "      <td>SIFEC Knitting Design Discipline Construction</td>\n",
+       "      <td>Teaching</td>\n",
        "      <td>talk-2</td>\n",
        "      <td>London School of Testing</td>\n",
        "      <td>2014-02-01</td>\n",
@@ -170,37 +170,31 @@
       ],
       "text/plain": [
        "                                               title  \\\n",
-       "0             Talk 1 on Relevant Topic in Your Field   \n",
+       "0  Served as the \"Fashion Technology\" Venue Manag...   \n",
        "1         Tutorial 1 on Relevant Topic in Your Field   \n",
-       "2             Talk 2 on Relevant Topic in Your Field   \n",
+       "2      SIFEC Knitting Design Discipline Construction   \n",
        "3  Donghua Diwei 2017 Shanghai Fashion Week Knitw...   \n",
        "\n",
        "                                 type    url_slug  \\\n",
-       "0                                Talk      talk-1   \n",
+       "0                  Skills Competition      talk-1   \n",
        "1                            Tutorial  tutorial-1   \n",
-       "2                                Talk      talk-2   \n",
+       "2                            Teaching      talk-2   \n",
        "3  Fashion show Collaborative Project      talk-3   \n",
        "\n",
-       "                                       venue        date  \\\n",
-       "0    UC San Francisco, Department of Testing  2012-03-01   \n",
-       "1  UC-Berkeley Institute for Testing Science  2013-03-01   \n",
-       "2                   London School of Testing  2014-02-01   \n",
-       "3               2017AW Shanghai Fashion Week  2017-04-12   \n",
+       "                                       venue        date          location  \\\n",
+       "0                    WorldSkills Competition  2022-12-01          Shanghai   \n",
+       "1  UC-Berkeley Institute for Testing Science  2013-03-01  Berkeley CA, USA   \n",
+       "2                   London School of Testing  2014-02-01        London, UK   \n",
+       "3               2017AW Shanghai Fashion Week  2017-04-12          Shanghai   \n",
        "\n",
-       "                    location               talk_url  \\\n",
-       "0  San Francisco, California                    NaN   \n",
-       "1           Berkeley CA, USA  http://exampleurl.com   \n",
-       "2                 London, UK    http://example2.com   \n",
-       "3                   Shanghai    http://example2.com   \n",
-       "\n",
-       "                                         description  \n",
-       "0  This is a description of your talk, which is a...  \n",
-       "1  This is a description of your tutorial, note t...  \n",
-       "2  This is a description of your talk, which is a...  \n",
-       "3  As the main person in charge of connecting Don...  "
+       "                talk_url                                        description  \n",
+       "0                    NaN  As the Venue Manager, responsible for pre-comp...  \n",
+       "1  http://exampleurl.com  This is a description of your tutorial, note t...  \n",
+       "2    http://example2.com  This is a description of your talk, which is a...  \n",
+       "3    http://example2.com  As the main person in charge of connecting Don...  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -253,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -315,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -326,8 +320,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2012-03-01-talk-1.md     2014-02-01-talk-2.md     2017-04-12-talk-3.md\n",
-      "2013-03-01-tutorial-1.md 2014-03-01-talk-3.md\n"
+      "2012-03-01-talk-1.md     2014-02-01-talk-2.md     2022-12-01-talk-1.md\n",
+      "2013-03-01-tutorial-1.md 2017-04-12-talk-3.md\n"
      ]
     }
    ],
@@ -337,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -349,23 +343,21 @@
      "output_type": "stream",
      "text": [
       "---\n",
-      "title: \"Donghua Diwei 2017 Shanghai Fashion Week Knitwear Special Show Release\"\n",
+      "title: \"Served as the \"Fashion Technology\" Venue Manager at the 46th WorldSkills Competition Shanghai Selection Event\"\n",
       "collection: talks\n",
-      "type: \"Fashion show Collaborative Project\"\n",
-      "permalink: /talks/2017-04-12-talk-3\n",
-      "venue: \"2017AW Shanghai Fashion Week\"\n",
-      "date: 2017-04-12\n",
-      "location: \" Shanghai\"\n",
+      "type: \"Skills Competition\"\n",
+      "permalink: /talks/2022-12-01-talk-1\n",
+      "venue: \"WorldSkills Competition\"\n",
+      "date: 2022-12-01\n",
+      "location: \"Shanghai\"\n",
       "---\n",
       "\n",
-      "[More information here](http://example2.com)\n",
-      "\n",
-      "As the main person in charge of connecting Donghua students at Tivi Fashion Company, I assisted more than 50 students in completing the presentation and production of over 80 sets of knitwear show pieces. The main tasks included yarn selection, pattern design, process improvement, and schedule arrangement.\n"
+      "As the Venue Manager, responsible for pre-competition preparations, on-site management, liaison with expert teams, management of technical support, and competition operations support team.\n"
      ]
     }
    ],
    "source": [
-    "!cat ../_talks/2017-04-12-talk-3.md"
+    "!cat ../_talks/2022-12-01-talk-1.md"
    ]
   }
  ],
