--- a/_talks/2014-02-01-talk-2.md
+++ b/_talks/2014-02-01-talk-2.md
@@ -3,11 +3,10 @@ title: "SIFEC Knitting Design Discipline Construction"
 collection: talks
 type: "Teaching"
 permalink: /talks/2014-02-01-talk-2
-venue: "London School of Testing"
-date: 2014-02-01
-location: "London, UK"
+venue: "Shanghai Sanda University"
+date: 2019-09-01
+location: "Shanghai"
 ---
 
-[More information here](http://example2.com)
-
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+![Editing a markdown file for a talk](/images/201901.png)
+Responsible for constructing the SIFEC Knitting Laboratory, designing the layout of teaching spaces, and introducing manual flat knitting machines, computerized flat knitting machines, and computer design systems.
